message error fixed

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>huddle</title>
+    <link rel="shortcut icon" type="image/jpg" href="https://res.cloudinary.com/stressipes/image/upload/v1616087945/i7ap0tqd68khgj4wvpod.png" />
   </head>
   <body>
     <div id="root"></div>
