--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>huddle</title>
+    <title>huddle | Discover awesome events.</title>
     <link rel="shortcut icon" type="image/jpg" href="https://res.cloudinary.com/stressipes/image/upload/v1616087945/i7ap0tqd68khgj4wvpod.png" />
   </head>
   <body>
